[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/player/Paddle.gd" type="Script" id=1]
[ext_resource path="res://src/player/Paddle.tres" type="CubeMesh" id=2]
[ext_resource path="res://src/debug/Axis.tscn" type="PackedScene" id=3]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 2, 0.25, 0.5 )

[sub_resource type="BoxShape" id=2]
extents = Vector3( 2.25, 0.5, 0.5 )

[node name="Paddle" type="StaticBody"]
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
mesh = ExtResource( 2 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )
disabled = true

[node name="BallPosition" type="Position3D" parent="."]

[node name="Axis" parent="BallPosition" instance=ExtResource( 3 )]
visible = false

[node name="Area" type="Area" parent="."]
visible = false

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 2 )

[connection signal="area_entered" from="Area" to="." method="_on_Area_area_entered"]
[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
